Practice-07/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins # Replace my-namespace with the desired namespace name
spec:
  rules:
    - host: localhost # Replace localhost with your domain or IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080

  ingressClassName: nginx
